syntax = "proto3";

option csharp_namespace = "AlgoShop";

service Orders {
  rpc PlaceOrder (OrderModel) returns (ResponseOrder);
}

message ProductsOrderModel {
  int32 id = 1;
  string description = 2;
  int32 quantity =3;
}

message OrderModel {
  int32 id = 1;
  repeated ProductsOrderModel products = 2;
}
message ResponseOrder{
	string message = 1;
}
