syntax = "proto3";

option csharp_namespace = "AlgoShop";

service Stocks {
  rpc AddProducts(ProductStock) returns (Response);
  rpc IncreaseStock(ProductStock) returns (Response);
  rpc DecreaseStock(ProductStock) returns (Response);
  rpc GetStock(ProductsModel) returns (ResponseInt);
  rpc IsStockAvailableForTheOrder(ResponseProductCollection) returns (ResponseBool);
  rpc GetAllProducts(EmptyObject) returns (ResponseProductCollection);
}

message ProductsModel {
  int32 id =1;
  string description = 2;
}
message ProductStock{
	int32 id =1 ;
	ProductsModel product=2 ;
	int32 quantity = 3;
}
message Response{
	string message = 1;
}
message ResponseInt{
	string message = 1;
	int32 result = 2;
}
message ResponseBool{
	string message = 1;
	bool result = 2;
}
message ResponseProductCollection{
	repeated ProductStock allProducts = 1;
}
message EmptyObject{

}